--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,6 @@
-custom: https://www.paypal.me/didgeridoohan
+custom: https://www.paypal.me/ivan Dien Saputra
+
+
+
+Langsung CV kan saldo anda menjadi ewallet dana,ovo,linkaja,BCA,BRI,
+Iya kali
